# skeleton-python-api

./: .gitignore  AGENTS.md  API_README.md  Dockerfile  Makefile  README.md  build_layer.sh  docker-compose.yml  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: ci.yml
app/: lambda_handler.py  main.py
app/api/: health.py  photos.py
app/core/: http_client.py
app/models/: photo.py
app/services/: photo_service.py
src/photos_api/: main.py
src/photos_api/api/: __init__.py  photos.py
src/photos_api/app/: __init__.py  factory.py
src/photos_api/http/: __init__.py  client.py  mock_client.py
src/photos_api/models/: __init__.py  photo.py
src/photos_api/photos/: __init__.py  gateway.py  mappers.py  protocols.py  service.py  validators.py
src/photos_api/settings/: __init__.py  config.py
tests/: test_api.py  test_gateway.py  test_health.py  test_photos.py
tests/api/: test_health.py  test_photos.py
tests/core/: test_http_client.py
tests/models/: test_photo.py
tests/services/: test_photo_service.py
