[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photos-api"
version = "0.1.0"
description = "A FastAPI service for fetching photos from JSONPlaceholder API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0",
    "respx>=0.20.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.2",
]

[project.scripts]
photos-api = "photos_api.main:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
